# Hackathon2023

./: EcoSort.ipynb  README.md  data_proccessing.py  main.py  pyproject.toml  requirements.txt
src/: Inicio.py  loging.py  main.py
src/pages/: 1 - 🗑️ - Tira tu basura.py  2 - 🚛 -  Rutas de Recoleccion.py
