[tool.poetry]
name = "ecosort"
version = "0.1.0"
description = ""
authors = ["Cornelio Posadas P <posadascornelio38@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.7.4"
streamlit = "^1.22.0"
gradio = "^3.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
